third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/partial_eq/unknown_struct_attribute.rs
#[derive(derive_more::PartialEq)]
#[partial_eq(unknown)]
struct Foo(i32);

fn main() {}
